feat: Introduce auto blueprint generation system with new scripts, tools, tests, documentation, CI/CD workflows, and a basic web application.

--- a/app/index.html
+++ b/app/index.html
@@ -18,6 +18,7 @@
       <label class="import">Import JSON <input type="file" id="file-import" accept="application/json"/></label>
       <button id="btn-clear" title="Clear all data">Clear</button>
     </nav>
+    <div id="status" role="status" aria-live="polite"></div>
   </header>
   <section id="quick-add">
     <h2>Quick Add</h2>
